--- a/assets/style.css
+++ b/assets/style.css
@@ -3,8 +3,6 @@ body {
 	height: 90vh;
 	text-align: center;
 	background-color: #fff !important;
-	/*background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);*/
-	/*background-size: 100% 100%;*/
 }
 
 .header {
@@ -22,36 +20,6 @@ h6 {
 	right: 0;
 	left: 0;
 }
-
-/*.shake {
-	animation: shake-animation 4.72s ease infinite;
-	transform-origin: 50% 50%;
-  }
-.element {
-	margin: 0 auto;
-	width: 150px;
-	height: 150px;
-	background: red;
-  }
-@keyframes shake-animation {
-	 0% { transform:translate(0,0) }
-	1.78571% { transform:translate(5px,0) }
-	3.57143% { transform:translate(0,0) }
-	5.35714% { transform:translate(5px,0) }
-	7.14286% { transform:translate(0,0) }
-	8.92857% { transform:translate(5px,0) }
-	10.71429% { transform:translate(0,0) }
-	100% { transform:translate(0,0) }
-  }
-
-/*.backdrop {
-	  -moz-box-shadow: 0px 6px 5px #111; 
-	  -webkit-box-shadow: 0px 6px 5px #111; 
-	  box-shadow: 0px 2px 10px #111; 
-	  -moz-border-radius:190px; 
-	  -webkit-border-radius:190px; 
-	  border-radius:190px;
-  }*/
 
 .linktree {
 	  width: 120px;
@@ -100,4 +68,30 @@ h6 {
 .icon:hover {
 	/*filter: invert(1);*/
 	fill: #DA4567 !important;
+}
+
+#menu {
+  float: right;
+  margin-top: 30px;
+  margin-right: 20px;
+  text-align: right;
+  width: 50px;
+  font-family: "Myriad Pro", "Helvetica Neue", Helvetica;
+  font-size: 0.1em;
+}
+
+#menu ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+#menu li a {
+  display: inline-block;
+  color: #0864c7;
+}
+
+#menu img {
+  text-align: left;
+  width: 50px;
 }
