--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,84 @@ body {
   background: #edf6f9;
 }
 
+.topnav {
+  overflow: hidden;
+  text-align: center;
+  margin: 0;
+  background: #edf6f9;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: none;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #666666;
+  color: white;
+}
+
+.gr_custom_container_ {
+  /* customize your Goodreads widget container here*/
+  border: 1px solid gray;
+  border-radius:10px;
+  padding: 10px 5px 10px 5px;
+  background-color: #FFFFFF;
+  color: #000000;
+  width: 500px;
+  margin-right: auto;
+  margin-left: auto;
+}
+.gr_custom_header_ {
+  /* customize your Goodreads header here*/
+  border-bottom: 1px solid gray;
+  width: 100%;
+  margin-bottom: 5px;
+  text-align: center;
+  font-size: 80%
+}
+.gr_custom_each_container_ {
+  /* customize each individual book container here */
+  width: 100%;
+  clear: both;
+  margin-bottom: 10px;
+  overflow: auto;
+  padding-bottom: 4px;
+  border-bottom: 1px solid #aaa;
+}
+.gr_custom_book_container_ {
+  /* customize your book covers here */
+  overflow: hidden;
+  height: 60px;
+    float: left;
+    margin-right: 4px;
+    width: 39px;
+}
+.gr_custom_author_ {
+  /* customize your author names here */
+  font-size: 10px;
+}
+.gr_custom_tags_ {
+  /* customize your tags here */
+  font-size: 10px;
+  color: gray;
+}
+.gr_custom_rating_ {
+  /* customize your rating stars here */
+  float: right;
+}
+
 h1,
 h6 {
 	font-family: 'Open Sans';
@@ -50,6 +128,12 @@ h6 {
   	color: gray;
 }
 
+#list {
+	text-align: left;
+	max-width: 550px;
+  	margin: 0 auto;
+  	color: rgb(78, 77, 77);
+}
 .user {
   display: inline-block;
   width: 150px;
@@ -94,4 +178,13 @@ h6 {
 #menu img {
   text-align: left;
   width: 50px;
+}
+
+.btn {
+  width: 50%; 
+  padding-top:10px; 
+  padding-bottom:10px; 
+  font-weight: 600;  
+  white-space: normal; 
+  word-wrap: break-word;
 }
